--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
+# Thư mục chứa các thư viện đã cài đặt
 node_modules/
+
+# File chứa các biến môi trường bí mật
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.DS_Store
-*.log
-dist/
-build/
-coverage/
